# unicode-ellipsis

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  publish.yml
src/: lib.rs  widecharwidth.rs  width.rs
