[package]
name = "unicode-ellipsis"
version = "0.1.1"
edition = "2021"
authors = ["Clement Tsang <cjhtsang@uwaterloo.ca>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ClementTsang/unicode-ellipsis"
readme = "README.md"
categories = ["text-processing", "value-formatting"]
keywords = ["text", "unicode", "word", "strings"]
description = "A crate to truncate Unicode strings to a certain width, automatically adding an ellipsis if the string is too long."

[lib]
test = true
doctest = true
doc = true

[dependencies]
unicode-segmentation = "1.11.0"
unicode-width = "0.1.12"

[lints.rust]
rust_2018_idioms = "deny"
missing_docs = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "deny"

[lints.clippy]
todo = "deny"
unimplemented = "deny"
missing_safety_doc = "deny"
